# neura-agent

./: CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ci-cd.md  docker.md
examples/: research_assistant.py  simple_search.py
neura/: cli.py
neura/agents/: base.py  executor.py  planner.py
neura/core/: graph.py
neura/memory/: base.py  vector.py
neura/tools/: web_scraper.py  web_search.py
