[tool.poetry]
name = "neura"
version = "0.1.0"
description = "NEURA - Neural Entity for Understanding, Reasoning, and Autonomy"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "neura"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
langgraph = "^0.0.15"
openai = "^1.12.0"
chromadb = "^0.4.22"
beautifulsoup4 = "^4.12.3"
playwright = "^1.41.2"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = [] 